fixed spacing on dances page

--- a/css/data.css
+++ b/css/data.css
@@ -503,7 +503,7 @@ nav li {
 	left: 50%;
 	height: 30%;
 	width: 100%;
-	margin: 30% 0 0 -40%;
+	margin: 33% 0 0 -40%;
 	border-style: dashed;
 }
 .hey p {
